# evm-cosmos-indicator-htlc

./: .env.example  .gitignore  CONTRACTS_DOCUMENTATION.md  LICENSE  README.md  hardhat.config.js  package.json
cosmwasm-contract/: Cargo.toml
cosmwasm-contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
evm-contracts/: BridgeHTLC.sol  IndicatorToken1155.sol
paper/: paper_token_bridge.tex
scripts/: deploy-htlc-cosmos.js  deploy-htlc-evm.js  gas-config.js  htlc-quick-test.js
