[package]
name = "token-bridge-receiver"
version = "0.1.0"
edition = "2021"
description = "CosmWasm contract that receives bridge messages from EVM and tracks minted tokens"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.49"
serde-json-wasm = "0.5.2"
cw-utils = "1.0.2"
hex = "0.4.3"
sha3 = "0.10.8"

# Pin base64ct to avoid edition 2024
base64ct = "=1.6.0"

[dev-dependencies]
cw-multi-test = "0.18.0"
